fix formatting on data structures page

--- a/content/reference/data_structures.adoc
+++ b/content/reference/data_structures.adoc
@@ -72,7 +72,7 @@ Numeric literals for BigInt and BigDecimal are specified using a postfix N and M
 [%hardbreaks]
 Computation: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2B[\+] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2D[-] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2A[\*]  https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2F[/]  https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/inc[inc] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/dec[dec]  https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/quot[quot] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/rem[rem] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/min[min] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/max[max]
 Auto-promoting computation: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2B%27[+'] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2D%27[-'] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%2A%27[*'] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/inc%27[inc'] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/dec%27[dec']
-Comparison: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%3D%3D[==] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%3C[<] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%3C%3D[<=] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%3E[>] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%3E%3D[>=] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/zero%3F[zero?] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/pos%3F[pos?] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/neg%3F[neg?]
+Comparison: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%3D%3D[==] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%3C[<] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%3C%3D[pass:[<=]] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%3E[>] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/%3E%3D[>=] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/zero%3F[zero?] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/pos%3F[pos?] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/neg%3F[neg?]
 Bitwise operations: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/bit-and[bit-and] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/bit-or[bit-or] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/bit-xor[bit-xor] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/bit-not[bit-not] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/bit-shift-right[bit-shift-right] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/bit-shift-left[bit-shift-left]
 Ratios: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/numerator[numerator] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/denominator[denominator]
 Coercions: https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/int[int] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/bigdec[bigdec] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/bigint[bigint] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/double[double] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/float[float] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/long[long] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/num[num] https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/short[short]
