Add missing # from var quote example
This was quite confusing!

--- a/content/guides/weird_characters.adoc
+++ b/content/guides/weird_characters.adoc
@@ -178,7 +178,7 @@ user=> (macroexpand `#(println %))
 
 [source,clojure]
 ----
-user=> (read-string "'foo")
+user=> (read-string "#'foo")
 (var foo)
 user=> (def nine 9)
 #'user/nine
