--- a/content/about/jvm_hosted.adoc
+++ b/content/about/jvm_hosted.adoc
@@ -15,7 +15,22 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 Clojure is designed to be a hosted language, sharing the JVM type system, GC, threads etc. It compiles all functions to JVM bytecode. Clojure is a great Java library consumer, offering the dot-target-member notation for calls to Java. Class names can be referenced in full, or as non-qualified names after being imported. Clojure supports the dynamic implementation of Java interfaces and classes using https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/reify[reify] and https://clojure.github.io/clojure/clojure.core-api.html#clojure.core/proxy[proxy]:
 
-Here's a small Swing app:
+Tapping into Java Classes are as easy as:
+[source,clojure]
+----
+(import 'java.util.HashMap)
+
+(def a-hashmap
+  (doto (HashMap.)
+    (.put "foo" "bar")
+    (.put "bat" "baz")))
+;; a-hashmap => {"bat" "baz", "foo" "bar"}
+
+(get a-hashmap "foo")
+;; => "bar"
+----
+
+Here's a small Swing app as a more involved example:
 [source,clojure]
 ----
 (import '(javax.swing JFrame JLabel JTextField JButton)
@@ -45,4 +60,5 @@ Here's a small Swing app:
       (.setVisible true))))
 (celsius)
 ----
-<<image:celsius.jpeg#,image:celsius.jpeg>>
+
+image:/images/content/about/celsius.png["celsius",height="80"]
