--- a/content/community/success_stories.adoc
+++ b/content/community/success_stories.adoc
@@ -344,6 +344,23 @@ Here are just some of the public success stories from companies using Clojure.  
                     </cite>
                   </blockquote>
                 </li>
+                <li>
+                  <p><img style="border: 3px solid #ebebeb;" src="/images/logos/kidblog.jpg" /></p>
+                  <p>
+                    <a target="fundingcircle" href="https://kidblog.org">Kidblog</a> uses Clojure to provide safe student publishing for K-12 teachers and students.
+                  </p>
+                  <hr>
+                  <p>
+                    <span class='read-more'>Learn about how they use Clojure in their <a target="testimonial" href="https://clojure.org/stories/kidblog">platform</a>.</span>
+                  </p>
+                  <blockquote style='margin-left: 0; padding: 0'>
+                    <p>Clojure makes our code more enjoyable to write, pleasant to read, and easier to review.</p>
+                    <cite>
+                      <strong>Matt Hardy</strong>
+                      Founder
+                    </cite>
+                  </blockquote>
+                </li>
               </ul>
             </div>
 
