update sf clojurebridge post language

--- a/content/events/2017/clojurebridge-sanfrancisco.adoc
+++ b/content/events/2017/clojurebridge-sanfrancisco.adoc
@@ -8,6 +8,6 @@ ClojureBridge San Francisco
 :jbake-start: 2017-09-15
 :jbake-end: 2017-09-16
 
-ClojureBridge is a free 1-day workshop aimed at increasing the participation of women, trans-gener and non-binary gender individuals in the Clojure community. The workshop is intended for those new to programming as well as individuals with some programming experience who would like to explore programming using Clojure, a modern functional programming language.
+ClojureBridge is a free 1-day workshop aimed at increasing the participation of women, trans* and non-binary gender individuals in the Clojure community. The workshop is intended for those new to programming as well as individuals with some programming experience who would like to explore programming using Clojure, a modern functional programming language.
 
 The workshop will introduce participants to fundamental programming concepts and approaches.
