fix images on swag page, closes #212

--- a/content/community/swag.adoc
+++ b/content/community/swag.adoc
@@ -24,7 +24,7 @@ Browse other http://www.zazzle.com/clojure+stickers?rf=238716329365496646[Clojur
 
 +Note: You can customize the color and shirt style, get hoodies, jerseys etc. If ordering a light shirt you'll need to set the font color to something dark.+
 
-image:http://rlv.zcache.com/clojure_t_large_logo-raf7c54b4b4ec4537afd1e5cb1824168d_vj82h_250.jpg?bg=0xffffff[Clojure T, Large Logo,link="http://www.zazzle.com/clojure_t_large_logo-235776431459512494?rf=238716329365496646"] Clojure T, Large Logo
+image:https://rlv.zcache.com/clojure_t_large_logo_t_shirt-raf7c54b4b4ec4537afd1e5cb1824168d_joa8u_324.jpg[Clojure T, Large Logo,link="http://www.zazzle.com/clojure_t_large_logo-235776431459512494?rf=238716329365496646"] Clojure T, Large Logo
 
-image:http://rlv.zcache.com/clojure_t_small_logo-rda2f449605144baf8631399aa19d8c63_vj82h_250.jpg?bg=0xffffff[Clojure T, Small Logo,link="http://www.zazzle.com/clojure_t_small_logo-235264388339470561?rf=238716329365496646"] Clojure T, Small Logo
+image:https://rlv.zcache.com/clojure_t_small_logo_t_shirt-rda2f449605144baf8631399aa19d8c63_joa8u_324.jpg[Clojure T, Small Logo,link="http://www.zazzle.com/clojure_t_small_logo-235264388339470561?rf=238716329365496646"] Clojure T, Small Logo
 
