Add 'Quick Clojure' book
http://www.apress.com/gp/book/9781484229514

--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,11 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70"]
 |===
 
+| image::http://ecx.images-amazon.com/images/I/41avfPT%2Bi6L._SL160.jpg[Quick Clojure,link="http://www.apress.com/gp/book/9781484229514"]
+| http://www.apress.com/gp/book/9781484229514[Quick Clojure] +
+by Mark McDonnell +
+September 21, 2017
+
 | image::https://s3.amazonaws.com/titlepages.leanpub.com/clojurescript-unraveled/small[ClojureScript Unraveled,link="https://leanpub.com/clojurescript-unraveled"]
 | https://leanpub.com/clojurescript-unraveled[ClojureScript Unraveled] +
 by Andrey Antukh, Alejandro Gómez +
