add prev/next nav to learn pages

--- a/content/guides/learn/functions.adoc
+++ b/content/guides/learn/functions.adoc
@@ -4,6 +4,11 @@ Alex Miller
 :type: learn
 :toc: macro
 :icons: font
+:navlinktext: Functions
+:prevpagehref: syntax
+:prevpagetitle: Syntax
+:nextpagehref: sequential_colls
+:nextpagetitle: Sequential Collections
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
