--- a/content/guides/learn/syntax.adoc
+++ b/content/guides/learn/syntax.adoc
@@ -4,6 +4,9 @@ Alex Miller
 :type: learn
 :toc: macro
 :icons: font
+:navlinktext: Syntax
+:nextpagehref: functions
+:nextpagetitle: Functions
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
