--- a/content/guides/learn/sequential_colls.adoc
+++ b/content/guides/learn/sequential_colls.adoc
@@ -4,6 +4,11 @@ Alex Miller
 :type: learn
 :toc: macro
 :icons: font
+:navlinktext: Sequential Collections
+:prevpagehref: functions
+:prevpagetitle: Functions
+:nextpagehref: hashed-colls
+:nextpagetitle: Hashed Collections
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
