--- a/content/guides/learn/sequential_colls.adoc
+++ b/content/guides/learn/sequential_colls.adoc
@@ -7,7 +7,7 @@ Alex Miller
 :navlinktext: Sequential Collections
 :prevpagehref: functions
 :prevpagetitle: Functions
-:nextpagehref: hashed-colls
+:nextpagehref: hashed_colls
 :nextpagetitle: Hashed Collections
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
