Printing section added with an overview on pprint

--- a/content/guides/guides.adoc
+++ b/content/guides/guides.adoc
@@ -10,6 +10,10 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 
 * <<getting_started#,Getting Started>>
 
+==== Printing
+
+* <<printing/overview#,Overview>>
+
 === Language
 
 * <<weird_characters#,Characters>>
@@ -21,4 +25,3 @@ ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 === Tools
 
 === Libraries
-
