--- a/content/guides/clj.adoc
+++ b/content/guides/clj.adoc
@@ -37,15 +37,9 @@ If you omit, the `--devel`, you will instead get the latest stable version of Cl
 
 === Installation on Linux
 
-COMING SOON
+Package installers - COMING SOON
 
-=== Installation on Windows
-
-COMING SOON
-
-=== Manual installation
-
-The following process can be used to manually install the latest devel version of the `clj` script on a *nix system. This installation process is similar to what the automated process does.
+The following process can be used to manually install the latest devel version of the `clj` script on a *nix system.
 
 [source,shell]
 ----
@@ -55,7 +49,7 @@ cd scratch
 curl -O https://download.clojure.org/install/brew/clojure-scripts.tar.gz
 tar xzf clojure-scripts.tar.gz
 
-# Install the scripts to a specified existing directory
+# Install the scripts to a directory (that must exist or be created)
 export CLJ_SCRIPTS=$HOME/clojure-scripts
 mkdir -p $CLJ_SCRIPTS
 ./install.sh $CLJ_SCRIPTS
@@ -63,6 +57,12 @@ mkdir -p $CLJ_SCRIPTS
 # Add scripts to your path
 export PATH=$PATH:$CLJ_SCRIPTS/bin
 ----
+
+Note that you will need to remove the scripts above from your path when package installers are available. 
+
+=== Installation on Windows
+
+COMING SOON
 
 == Usage
 
